# nano-1

./: .claude.json  .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION.md  INTEGRATION_COMPLETE.md  PIPE_OPERATOR_MIGRATION.md  README.md  RESULTS.md  Taskfile.build.yml  Taskfile.dev.yml  Taskfile.dist.yml  Taskfile.semver.yml  Taskfile.yml  VERSION_RESET.md  coverage.xml  mcp.json  nanobrick.toml  pyproject.toml  sample_data.json  v0.1.0-release-notes.md
.archive/: CONVO_STATE.md
.claude/: settings.local.json
.claude/commands/: exec-parallel.md  gitignore-audit.md  gitignore-update.md  init-parallel-simple.md
.cursor/rules/: best-practice-fastapi-backend-architecture.mdc  best-practice-gitignore.mdc  database-models.mdc  git_commit.mdc  infra.mdc  presales-app-architecture.mdc  pyproject-toml-template.mdc  python-project-best-practices.mdc  streamlit-ui-best-practices.mdc  taskfile-design.mdc  taskfile-quarto.mdc  version-management.mdc
.release/: rollback-20250605-114802.json  rollback-20250606-014908.json
.task/checksum/: dist-build
activate/: pyvenv.cfg
dependents/: README.md  nano-scorm
docs/: design_patterns.md  nanobricks-v2.md  nanobricks.md  reasoning.md  scratchpad-sdk-focus.md
docs/_bridge/: context-injector.py
docs/agentic/: INNOVATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  llms.txt  version.yaml
docs/prompts/: initial.md
docs/quarto/: README.md  _quarto.yml  agentic-cheatsheet.qmd  agentic-docs-formats.qmd  agentic-docs-guide.qmd  agentic-docs-overview.qmd  agentic-docs-walkthrough.qmd  agentic-workflows-guide.qmd  ai-integration.qmd  ai-protocols.html  ai-protocols.qmd  architecture-diagrams.qmd  architecture.qmd  claude-code.qmd  comparison.qmd  design-philosophy.qmd  developer-workflows.qmd  distribution.qmd  evolution.qmd  git-cheat-sheet.qmd  human-overview.qmd  human.qmd  index.qmd  multi-project-development.qmd  naming-conventions.qmd  nanobrick.qmd  patterns.qmd  pipeline.qmd  principles.qmd  production-examples.qmd  project-history.qmd  quickstart.qmd  roadmap.qmd  sdk-guide.qmd  styles.css  superpowers.qmd  (+7 more)
examples/: advanced_patterns.py  advanced_transformers.py  advanced_validators.py  ai_agent_system.py  ai_protocols_demo.py  ai_reasoning_demo.py  atomic_commits_demo.py  basic_pipeline.py  builtin_skills.py  configuration.py  custom_skills.py  dependency_injection.py  deployment_example.py  devtools_demo.py  documentation_generator.py  hotswap_example.py  mcp_example.py  new-project-setup.sh  observability_example.py  performance_example.py  pipeline_builder_demo.py  production_example.py  quick-start-project.py  registry_example.py  scaffolding.py  scaffolding_demo.py  security_example.py  sync_usage.py  type_utilities_demo.py
implementation/: README.md  phase-01-core-protocol.md  phase-02-enhanced-core.md  phase-03-configuration.md  phase-04-core-superpowers.md  phase-05-advanced-features.md  phase-06-stdlib-tooling.md  phase-07-ai-integration.md  phase-08-production.md
prds/: README.md  prd-parallel-development-unified.md
quarto/: README.md  _quarto.yml  ai-protocols.qmd  architecture-diagrams.qmd  configuration.qmd  evolution.qmd  human.qmd  patterns.qmd  quickstart.qmd  roadmap.qmd  tutorial.qmd  type-safety.qmd
reports/: agentic-validation-report.json  examples_validation_report.md
scripts/: README.md  build-for-distribution.sh  check-prereqs.sh  migrate_pipe_operator.py  reset-tags.sh  verify-installation.py
taskfiles/: CLAUDE.md  README.md  Taskfile.agentic.yml  Taskfile.atomic.yml  Taskfile.build.yml  Taskfile.dev.yml  Taskfile.docs.yml  Taskfile.version-enhanced.yml  Taskfile.version.yml  Taskfile.workflows.yml
temp/: ai-protocols-management-summary.md  indydevdan_transcript_001.md  pipe-operator-migration-summary.md  prd-best-practices-research.md  test-failures-analysis.md  v0.2.0-cleanup-summary.md  v0.2.0-final-cleanup-summary.md  v0.2.0-release-summary.md  v0.2.0-test-alignment-recommendations.md
test-projects/task-test-app/: .gitignore  README.md  Taskfile.yml  pyproject.toml
test-projects/task-test-app/src/task-test-app/: __init__.py
test-projects/task-test-app/tests/: test_example.py
test-projects/test-nanobricks-app/: .gitignore  README.md  pyproject.toml  setup.sh
test-projects/test-nanobricks-app/src/test-nanobricks-app/: __init__.py  __main__.py
test-projects/test-nanobricks-app/tests/: conftest.py  test_basic.py
tests/: README.md  __init__.py  conftest.py  test_builtin_superpowers.py  test_config.py  test_performance.py  test_production.py  test_registry.py  test_security.py  test_superpowers.py
(+235 files in other folders)
