[project]
name = "task-test-app"
version = "0.1.0"
description = "A project built with Nanobricks"
requires-python = ">=3.13"
dependencies = [
    "nanobricks @ file:///Users/jankothyson/Code/kaosmaps/nano/nano-1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3.0",
    "mypy>=1.9",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
