[project]
name = "test-nanobricks-app"
version = "0.1.0"
description = "A project built with Nanobricks"
requires-python = ">=3.13"
dependencies = [
    # Nanobricks - choose one:
    # For active development (editable):
    "nanobricks @ file:///Users/jankothyson/Code/kaosmaps/nano/nano-1",
    
    # For stable local:
    # "nanobricks @ file:///Users/jankothyson/Code/kaosmaps/nano/nano-1/dist/nanobricks-0.1.0-py3-none-any.whl",
    
    # Your other dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3.0",
    "mypy>=1.9",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
